
* [Unreleased]

** Added

- Add new command ~LaTeX-repeat-recent-math~ which looks backward for a
  recent top-level display math construct and inserts a copy to the
  current line.

- Add new support files =style/floatflt.el=, =style/fontawesome7.el= and
  =style/ltx-talk.el=.

- Add new function ~preview-dvisvgm-command~ to generate SVG images in
  preview.

** Changed

- Change the format of the value stored in ~preview-dumped-alist~.  Add
  a new optional argument to the function ~preview-watch-preamble~.

- Respect the value of ~font-latex-fontify-sectioning~ when fontifying
  macros as =slide-title=.  This affects macros provided by
  =style/beamer.el= and =style/ltx-talk.el=.

- Change the name of ~preview-dvipng-command~ to ~preview-dvi*-command~.
  Also make it accept a function symbol returning the full command.

- Change the name of ~preview-dvipng-image-type~ to
  ~preview-dvi*-image-type~.

- Change the setting of ~preview-image-creators~ and
  ~preview-gs-image-type-alist~ to use ~dvi*~ instead of ~dvipng~.

* [14.1.0] - 2025-07-11

** Added

- Add new commands ~LaTeX-make-inline~ which converts the display math
  environment at point to inline math and the more general
  ~LaTeX-modify-math~ which converts the mathematical construct at point
  into one with different kind of delimiter or another environment.
- Add new support files =style/embedfile.el=, =style/figureversions.el=,
  =style/needspace.el=, =style/tablericons.el= and =style/wrapstuff.el=.

** Changed

- AUCTeX now requires GNU Emacs 28.1 or higher.
- Replace =$..$= with =\[..\]= in LaTeX mode and any derived mode when
  hitting =$= repeatedly where ~TeX-electric-math~ is non-~nil~.

** Fixed

- Fix unwanted expansion of abbrevs during filling when ~abbrev-mode~ is
  enabled.
- Fix the command-line options passed to latexmk when processing files
  with xetex in order to run the viewer correctly.
- Fix removing of stale verbatim entries in auto-parsed file once the